# LPBF-Layer-Seg

./: .gitignore  README.md  inference.py  pyproject.toml  setup.py  test_suite_analysis.py  train.py
configs/: config.py
data/: Dataset_Overview.md  data_parser.py  data_parser_v2025_09.py  peregrine2021_metadata.py  peregrine2022_metadata.py  peregrine2025_metadata.py
models/UNet/: Model_Overview.md
models/UNet/checkpoints/Best_100_epochs/: Model_Evaluation.md  training_log.txt
